# cmakex

./: .clang-format  .gitignore  .repotest-config.sh  CHANGELOG.md  CMakeLists.txt  INSTALL.md  README.md  clang-format-all.sh  compact-build.sh  configure.sh  deps.cmake  make.sh  notes.txt
samples/: presets.yaml
src/: CMakeLists.txt  getpreset.cpp
src/cmakex/: CMakeLists.txt  build.cpp  build.h  cereal_utils.h  circular_dependency_detector.cpp  circular_dependency_detector.h  clone.cpp  clone.h  cmakex-types.cpp  cmakex-types.h  cmakex.cpp  cmakex_utils.cpp  cmakex_utils.h  cmakexengine.cpp  cmakexengine.h  exec_process.h  filesystem.cpp  filesystem.h  git.cpp  git.h  helper_cmake_project.cpp  helper_cmake_project.h  install.cpp  install.h  install_deps_phase_one.cpp  install_deps_phase_one.h  install_deps_phase_two.cpp  install_deps_phase_two.h  installdb.cpp  installdb.h  invoke.cpp  invoke.h  main.cpp  misc_util.cpp  misc_util.h  misc_utils.cpp  misc_utils.h  out_err_messages.cpp  out_err_messages.h  pars.h  (+15 more)
src/common/: CMakeLists.txt  misc_utils.cpp  misc_utils.h  using-decls.h
src/filesystem/: CMakeLists.txt  filesystem.cpp  filesystem.h
src/getpreset/: CMakeLists.txt  getpreset.cpp  getpreset.h
src/process/: CMakeLists.txt  exec_process.cpp  exec_process.h  out_err_messages.cpp  out_err_messages.h
test/: CMakeLists.txt  test_cmake_steps.cpp
test/test_cmake_steps_cmake_project/: CMakeLists.txt  main.cpp
